feat: count number of user,record,and admin
