# BE/Routes/routes.js
@@ -12,10 +12,12 @@ router.put("/users/:userId", UserController.updateUser);
 router.delete("/users/:userId", UserController.deleteUser);
 router.get("/users/:userId", UserController.getUserById);
 router.get("/users/email/:email", UserController.getUserByEmail);
+router.get("/usercount", UserController.getNumberOfUsers);
 
 //Admin routes
 router.post("/admin/login", AdminController.loginAdmin);
 router.post("/admin/register", AdminController.registerAdmin);
+router.get("/admincount", AdminController.getNumberOfAdmins);
 
 //TTVRecord routes
 router.get("/records", TTVRecordController.getAllRecords);
@@ -23,5 +25,6 @@ router.post("/records", TTVRecordController.addRecord);
 router.get("/records/:id", TTVRecordController.getRecordById);
 router.put("/records/:id", TTVRecordController.updateRecord);
 router.delete("/records/:id", TTVRecordController.deleteRecord);
+router.get("/recordcount", TTVRecordController.getNumberOfRecords);
 
 module.exports = router;
